ms-client/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ms-client
  namespace: my-apps
spec:
  replicas: 4
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {duration: 30s}
        - setWeight: 50
        - pause: {duration: 60s}
        - setWeight: 100
      maxSurge: 1
      maxUnavailable: 0
      analysis:
        templates:
          - templateName: http-success-rate
        args:
          - name: service-name
            value: ms-client-canary
  selector:
    matchLabels:
      app: ms-client
  template:
    metadata:
      labels:
        app: ms-client
    spec:
      containers:
        - name: ms-client
          image: nihbertolo97/istioarticle:ms-client
          ports:
            - containerPort: 8080
