ms-client/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ms-client
  namespace: my-apps
spec:
  hosts:
    - "*"
  gateways:
    - ms-client-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ms-client-active
            port:
              number: 80
